re styling of all courses .htmls, fixing footer and navbar

--- a/intro.html
+++ b/intro.html
@@ -2,176 +2,306 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Coffee Project Co.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Coffee Project Co.</title>
 </head>
 
 <body>
 
-    <header>
+	<header>
 
-        <!-- navbar -->
+		<!-- navbar -->
 
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
+				<img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
-            <div class="collapse navbar-collapse " id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="coffees.html">Our coffees</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="brewing.html">Brewing guides</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="intro.html">Intro to coffee</a>
-                            <a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
-                            <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+				<div class="collapse navbar-collapse " id="collapsibleNavbar">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="coffees.html">Our coffees</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="brewing.html">Brewing guides</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our
+								courses</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
+								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
+								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
+							</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+                    <div class="col d-inline-flex justify-content-right d-md-none d-lg-inline">
+						<ul class="list-inline navmedia">
+                            <li class="list-inline-item">
+								<a href="https://www.facebook.com/" target="_blank">
+									<i class="fab fa-facebook-f" aria-hidden="true"></i>
+									<span class="sr-only">Facebook</span>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://twitter.com/" target="_blank">
+									<i class="fab fa-twitter" aria-hidden="true"></i>
+									<span class="sr-only">Twitter</span></a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://www.linkedin.com" target="_blank">
+									<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+									<span class="sr-only">LinkedIn</span>
+								</a>
+							</li>
+                            <li class="list-inline-item">
+								<a href="https://www.pinterest.com/" target="_blank">
+									<i class="fab fa-pinterest" aria-hidden="true"></i>
+									<span class="sr-only">Pinterest</span>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://www.instagram.com/" target="_blank">
+									<i class="fab fa-instagram" aria-hidden="true"></i>
+									<span class="sr-only">Instagram</span>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://github.com/roxanahefferon" target="_blank">
+									<i class="fab fa-github-square" aria-hidden="true"></i>
+									<span class="sr-only">Github</span>
+								</a>
+							</li>
+						</ul>
+				</div>
+		</nav>
+	</header>
 
-    </header>
+	<!-- heading -->
 
+	<div class="container main-container">
+		<div class="container main-landing">
+			<div class="row no-gutters">
+				<div class="col">
+					<img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
+					<p class="ph-landing uppercase">courses</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <!-- main section -->
+	<!-- accordion-->
 
-    <div class="container main-container">
-        <div class="container main-landing">
-            <div class="row no-gutters">
-                <div class="col">
-                    <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
-                    <p class="ph-landing uppercase">courses</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
+	<div class="container">
+		<div class="row no-gutters">
+			<div class="col-10 offset-1">
+				<p class="uppercase text-center name-accordion">Intro to coffee</p>
+				<div id="accordion">
+					<div class="card card-accordion">
+						<div class="card-header header-accordion">
+							<a class="card-link" data-toggle="collapse" href="#collapseone">
+								<div class="text-center">
+									<i class="fas fa-coins fa-2x"></i>
+									<p>SCA Points</p>
+							</a>
+						</div>
+					</div>
+					<div id="collapseone" class="collapse" data-parent="#accordion">
+						<div class="card-body body-accordion">
+							<p>This course has one level and brings 10 points towards the Coffee Diploma.</p>
+							<p>It is an internationally recognized course.</p>
+						</div>
+					</div>
+				</div>
 
-    <div class="container courses-container">
-        <div class="row no-gutters">
-            <div class="col-10 offset-1">
-                <h4 class="uppercase my-4 intro">Intro to coffee</h4>
-                <h6>full day, 10 points</h6>
-                <p>Want to start a journey into coffee but not quite sure what it’s all about? This is an ideal module to peel back the skin on this popular beverage and explore its wonders.</p>
-                <h6>what we will cover</h6>
-                <p>Take a look into the journey coffee takes from farming, harvesting, processing and roasting before finally brewing and drinking. Learn the flavours the wondrous coffee bean has to offer with a cupping session before deciding what module to sit next!</p>
-                <h6>previous experience</h6>
-                <p>No prior knowledge required</p>
-                <h6>cost</h6>
-                <p>EUR 99 including exam, Cert Fee (EUR 60) + VAT</p>
-                </div>
-                </div>
-            </div>
+				<div class="card card-accordion">
+					<div class="card-header header-accordion">
+						<a class="collapsed card-link" data-toggle="collapse" href="#collapsetwo">
+							<div class="text-center">
+								<i class="fas fa-sitemap fa-2x"></i>
+								<p>Overview</p>
+						</a>
+					</div>
+				</div>
+				<div id="collapsetwo" class="collapse" data-parent="#accordion">
+					<div class="card-body body-accordion">
+						<p>Take a look into the journey coffee takes from farming, harvesting, processing and
+							roasting before finally brewing and drinking.</p>
+						<p>Learn the flavours the wondrous coffee
+							bean has to offer with a cupping session before deciding what module to sit next!
+						</p>
+					</div>
+				</div>
+			</div>
 
+			<div class="card card-accordion">
+				<div class="card-header header-accordion">
+					<a class="collapsed card-link" data-toggle="collapse" href="#collapsethree">
+						<div class="text-center">
+							<i class="fas fa-chart-line fa-2x"></i>
+							<p>Experience</p>
+					</a>
+				</div>
+			</div>
+			<div id="collapsethree" class="collapse" data-parent="#accordion">
+				<div class="card-body body-accordion">
+					<p>No prior knowledge required</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <!-- overview-section -->
+	<div class="card card-accordion">
+		<div class="card-header header-accordion">
+			<a class="collapsed card-link" data-toggle="collapse" href="#collapsefour">
+				<div class="text-center">
+					<i class="fas fa-money-bill-alt fa-2x"></i>
+					<p>Cost</p>
+			</a>
+		</div>
+	</div>
+	<div id="collapsefour" class="collapse" data-parent="#accordion">
+		<div class="card-body body-accordion">
+			<p>EUR 99 including exam, Cert Fee (EUR 60) + VAT</p>
+		</div>
+	</div>
+	</div>
 
-    <div class="container">
-        <div class="row no-gutters">
-            <div class="col-10 offset-1">
-                <div class="sca-content">
-                    <hr class="section-divider">
-                    <p>This course charts coffee’s journey from its origins in Ethiopia to the major commodity it is today, enjoyed by millions of people around the world.</p>
-                    <p>From farming the cherries through drying, roasting, brewing and finally drinking, this module looks at the processes coffee goes through.</p>
-                    <p>This course also includes “coffee cupping which allows you to taste the various flavours coffee has to offer.</p>
+	<div class="card card-accordion">
+		<div class="card-header header-accordion">
+			<a class="collapsed card-link" data-toggle="collapse" href="#collapsesix">
+				<div class="text-center">
+					<i class="fas fa-envelope-open-text fa-2x"></i>
+					<p>More Info</p>
+			</a>
+		</div>
+	</div>
+	<div id="collapsesix" class="collapse" data-parent="#accordion">
+		<div class="card-body">
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col-10 offset-1">
+						<div class="text-center">
+							<h3 class="uppercase form-heading">How does that sound?</h3>
+							<p>Send us a message and we will come back to you with course availability and
+								more information</p>
+							<p><small>Alternatively please register your interest at hi@coffeeproject.ie</small>
+							</p>
+						</div>
+						<form>
+							<input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+							<input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+							<textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+							<div class="form-row text-center">
+								<div class="col">
+									<button type="submit" class="btn my-button my-border">Send message</button>
+								</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
 
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+	<!-- footer -->
 
-    <!-- form -->
+	<footer>
+		<div class="footer">
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col d-inline-flex justify-content-center">
+						<ul class="list-inline">
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.facebook.com/" target="_blank">
+									<i class="fab fa-facebook-f" aria-hidden="true"></i>
+									<span class="sr-only">Facebook</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://twitter.com/" target="_blank">
+									<i class="fab fa-twitter" aria-hidden="true"></i>
+									<span class="sr-only">Twitter</span></a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.linkedin.com" target="_blank">
+									<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+									<span class="sr-only">LinkedIn</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.pinterest.com/" target="_blank">
+									<i class="fab fa-pinterest" aria-hidden="true"></i>
+									<span class="sr-only">Pinterest</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.instagram.com/" target="_blank">
+									<i class="fab fa-instagram" aria-hidden="true"></i>
+									<span class="sr-only">Instagram</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://github.com/roxanahefferon" target="_blank">
+									<i class="fab fa-github-square" aria-hidden="true"></i>
+									<span class="sr-only">Github</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 
-    <div class="container">
-        <div class="row no-gutters">
-            <div class="col-10 offset-1">
-                <h3 class="text-center form-heading uppercase">How does that sound?</h3>
-                <p>Send us a message and we will come back to you with course availability and more information</p>
-                <p><small>Alternatively please register your interest at hi@coffeeproject.ie.</small></p>
-                <form>
-                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
-                    <div class="form-row text-center">
-                        <div class="col">
-                            <button type="submit" class="btn my-button my-border">Send message</button>
-                        </div>
-                </form>
-                </div>
-            </div>
-        </div>
-    </div>
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col d-inline-flex justify-content-center d-sm-block text-center">
+						<ul class="list-inline">
+							<li class="list-inline-item footer-inline">
+								<p>hi@coffeeproject.ie</p>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<p>+35313657616</p>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<p>137 Peaberry Street, Dublin 1 | A12 BC34</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col text-center">
+						<p>2019 | ©roxheff</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
-
-    <!-- footer -->
-
-    <footer>
-        <div class="footer">
-            <div class="container">
-                <div class="row no-gutters">
-                    <div class="col-6 media d-inline-flex justify-content-center">
-                        <ul class="list-inline">
-                            <li class="list-inline-item footer-inline">
-                                <a href="https://www.facebook.com/" target="_blank">
-<i class="fab fa-facebook-f" aria-hidden="true"></i>
-<span class="sr-only">Facebook</span>
-</a>
-                            </li>
-                            <li class="list-inline-item footer-inline">
-                                <a href="https://twitter.com/" target="_blank">
-<i class="fab fa-twitter" aria-hidden="true"></i>
-<span class="sr-only">Twitter</span></a>
-                            </li>
-                            <li class="list-inline-item footer-inline">
-                                <a href="https://www.linkedin.com" target="_blank">
-<i class="fab fa-linkedin-in" aria-hidden="true"></i>
-<span class="sr-only">LinkedIn</span>
-</a>
-                            </li>
-                            <li class="list-inline-item footer-inline">
-                                <a href="https://www.pinterest.com/" target="_blank">
-<i class="fab fa-pinterest" aria-hidden="true"></i>
-<span class="sr-only">Pinterest</span>
-</a>
-                            </li>
-                            <li class="list-inline-item footer-inline">
-                                <a href="https://www.instagram.com/" target="_blank">
-<i class="fab fa-instagram" aria-hidden="true"></i>
-<span class="sr-only">Instagram</span>
-</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-6 my-info d-inline-flex justify-content-center">
-                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
-                        <span class="sr-only">Github</span><span>&nbsp;</span>
-                        <p>2019| ©roxheff</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
