--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
 	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<title>Coffee Project Co.</title>
+    <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png"/>
 </head>
 
 <body>
 	<header>
 
-		<!-- navbar -->
+<!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
-				<img src="./assets/images/coffee-project-logo.png" width="120" alt="coffee proyect co. logo"></a>
+				<img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
 				<div class="collapse navbar-collapse " id="collapsibleNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="coffees.html">Our Coffees</a>
+							<a class="nav-link" href="coffees.html">Our coffees</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="brewing.html">Brewing Guides</a>
+							<a class="nav-link" href="brewing.html">Brewing guides</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our
-								Courses</a>
+								courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
@@ -43,6 +44,44 @@
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
+                    <div class="col d-inline-flex justify-content-right d-md-none d-lg-inline">
+						<ul class="list-inline navmedia">
+                            <li class="list-inline-item">
+								<a href="https://www.facebook.com/" target="_blank">
+									<i class="fab fa-facebook-f" aria-hidden="true"></i>
+									<span class="sr-only">Facebook</span>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://twitter.com/" target="_blank">
+									<i class="fab fa-twitter" aria-hidden="true"></i>
+									<span class="sr-only">Twitter</span></a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://www.linkedin.com" target="_blank">
+									<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+									<span class="sr-only">LinkedIn</span>
+								</a>
+							</li>
+                            <li class="list-inline-item">
+								<a href="https://www.pinterest.com/" target="_blank">
+									<i class="fab fa-pinterest" aria-hidden="true"></i>
+									<span class="sr-only">Pinterest</span>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://www.instagram.com/" target="_blank">
+									<i class="fab fa-instagram" aria-hidden="true"></i>
+									<span class="sr-only">Instagram</span>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://github.com/roxanahefferon" target="_blank">
+									<i class="fab fa-github-square" aria-hidden="true"></i>
+									<span class="sr-only">Github</span>
+								</a>
+							</li>
+						</ul>
 				</div>
 		</nav>
 
@@ -394,58 +433,80 @@
                             </div>
                             </div>
 
-							<!-- footer -->
+<!-- footer -->
 
-							<footer>
-								<div class="footer">
+	<footer>
+		<div class="footer">
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col d-inline-flex justify-content-center">
+						<ul class="list-inline">
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.facebook.com/" target="_blank">
+									<i class="fab fa-facebook-f" aria-hidden="true"></i>
+									<span class="sr-only">Facebook</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://twitter.com/" target="_blank">
+									<i class="fab fa-twitter" aria-hidden="true"></i>
+									<span class="sr-only">Twitter</span></a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.linkedin.com" target="_blank">
+									<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+									<span class="sr-only">LinkedIn</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.pinterest.com/" target="_blank">
+									<i class="fab fa-pinterest" aria-hidden="true"></i>
+									<span class="sr-only">Pinterest</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://www.instagram.com/" target="_blank">
+									<i class="fab fa-instagram" aria-hidden="true"></i>
+									<span class="sr-only">Instagram</span>
+								</a>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<a href="https://github.com/roxanahefferon" target="_blank">
+									<i class="fab fa-github-square" aria-hidden="true"></i>
+									<span class="sr-only">Github</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 
-									<div class="container">
-										<div class="row">
-
-											<div class="col-6 media d-inline-flex justify-content-center">
-												<ul class="list-inline">
-													<li class="list-inline-item footer-inline">
-														<a href="https://www.facebook.com/" target="_blank">
-															<i class="fab fa-facebook-f" aria-hidden="true"></i>
-															<span class="sr-only">Facebook</span>
-														</a>
-													</li>
-													<li class="list-inline-item footer-inline">
-														<a href="https://twitter.com/" target="_blank">
-															<i class="fab fa-twitter" aria-hidden="true"></i>
-															<span class="sr-only">Twitter</span></a>
-													</li>
-													<li class="list-inline-item footer-inline">
-														<a href="https://www.linkedin.com" target="_blank">
-															<i class="fab fa-linkedin-in" aria-hidden="true"></i>
-															<span class="sr-only">LinkedIn</span>
-														</a>
-													</li>
-													<li class="list-inline-item footer-inline">
-														<a href="https://www.pinterest.com/" target="_blank">
-															<i class="fab fa-pinterest" aria-hidden="true"></i>
-															<span class="sr-only">Pinterest</span>
-														</a>
-													</li>
-													<li class="list-inline-item footer-inline">
-														<a href="https://www.instagram.com/" target="_blank">
-															<i class="fab fa-instagram" aria-hidden="true"></i>
-															<span class="sr-only">Instagram</span>
-														</a>
-													</li>
-
-												</ul>
-											</div>
-											<div class="col-6 my-info d-inline-flex justify-content-center">
-												<a href="https://github.com/roxanahefferon"
-													target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
-												<span class="sr-only">Github</span><span>&nbsp;</span>
-												<p>2019| ©roxheff</p>
-											</div>
-										</div>
-									</div>
-							</footer>
-
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col d-inline-flex justify-content-center d-sm-block text-center">
+						<ul class="list-inline">
+							<li class="list-inline-item footer-inline">
+								<p>hi@coffeeproject.ie</p>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<p>+35313657616</p>
+							</li>
+							<li class="list-inline-item footer-inline">
+								<p>137 Peaberry Street, Dublin 1 | A12 BC34</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col text-center">
+						<p>2019 | ©roxheff</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 							<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 								integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 								crossorigin="anonymous"></script>
