change in courses content

--- a/brewing-sca.html
+++ b/brewing-sca.html
@@ -93,7 +93,7 @@
 		<div class="container main-landing">
 			<div class="row no-gutters">
 				<div class="col">
-					<img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
+					<img src="./assets/images/ourcourses.jpg" alt="milk jugs image" class="ourcourses-img">
 					<p class="ph-landing uppercase">courses</p>
 				</div>
 			</div>
@@ -118,8 +118,8 @@
 					</div>
 					<div id="collapseone" class="collapse" data-parent="#accordion">
 						<div class="card-body body-accordion">
-							<p>This course has one level and brings 10 points towards the Coffee Diploma.</p>
-							<p>It is an internationally recognized course.</p>
+							<p>This one day course brings 5 points towards the Coffee Diploma.</p>
+							<p>It focuses on the core skills required to start brewing great tasting filter coffee covering all brew variables and looking at commonly used devices.</p>
 						</div>
 					</div>
 				</div>
@@ -135,11 +135,10 @@
 				</div>
 				<div id="collapsetwo" class="collapse" data-parent="#accordion">
 					<div class="card-body body-accordion">
-						<p>Take a look into the journey coffee takes from farming, harvesting, processing and
-							roasting before finally brewing and drinking.</p>
-						<p>Learn the flavours the wondrous coffee
-							bean has to offer with a cupping session before deciding what module to sit next!
-						</p>
+						<p>Brewing guidelines for industry standard coffee.</p>
+						<p>Brewing variables ratio of water to coffee, grind size, brewing time, water temperature and brewing turbulence.</p>
+                        <p>Look at different brewing methods and methodology for V60, Chemex, AeroPress and more.</p>
+                        <p>Apply method based on grind size</p>
 					</div>
 				</div>
 			</div>
@@ -192,9 +191,9 @@
 				<div class="row no-gutters">
 					<div class="col-10 offset-1">
 						<div class="text-center">
-							<h3 class="uppercase form-heading">How does that sound?</h3>
-							<p>Send us a message and we will come back to you with course availability and
-								more information</p>
+							<h3 class="uppercase form-heading">Get in touch</h3>
+							<p>We're here to help you find the courses that work for you.</p>
+                            <p>Get in touch with our <em>education team</em> by submitting a message below.</p>
 							<p><small>Alternatively please register your interest at hi@coffeeproject.ie</small>
 							</p>
 						</div>
