--- a/barista-sca.html
+++ b/barista-sca.html
@@ -93,7 +93,7 @@
 		<div class="container main-landing">
 			<div class="row no-gutters">
 				<div class="col">
-					<img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
+					<img src="./assets/images/ourcourses.jpg" alt="milk jugs image" class="ourcourses-img">
 					<p class="ph-landing uppercase">courses</p>
 				</div>
 			</div>
@@ -118,8 +118,9 @@
 					</div>
 					<div id="collapseone" class="collapse" data-parent="#accordion">
 						<div class="card-body body-accordion">
-							<p>This course has one level and brings 10 points towards the Coffee Diploma.</p>
-							<p>It is an internationally recognized course.</p>
+							<p>This course is at foundation level and brings 5 points towards the Coffee Diploma.</p>
+							<p>New to coffee? This one day class focusses on the core skills required to deliver all the key drinks on the menu.</p>
+                            <p>You’ll also gain an insight into how coffee is grown, processed and roasted.</p>
 						</div>
 					</div>
 				</div>
@@ -135,11 +136,10 @@
 				</div>
 				<div id="collapsetwo" class="collapse" data-parent="#accordion">
 					<div class="card-body body-accordion">
-						<p>Take a look into the journey coffee takes from farming, harvesting, processing and
-							roasting before finally brewing and drinking.</p>
-						<p>Learn the flavours the wondrous coffee
-							bean has to offer with a cupping session before deciding what module to sit next!
-						</p>
+						<p>Explore the differences between Arabicas and Robustas and how to maintain freshness.</p>
+						<p>Extract the perfect espresso following a set of steps that make up the industry discipline</p>
+                        <p>Steam different milk textures to bring together a whole host of espresso based drinks.</p>
+                        <p>Round off the learning with machine cleaning and basic maintenance, before sitting a series of assessments.</p>
 					</div>
 				</div>
 			</div>
@@ -172,7 +172,7 @@
 	</div>
 	<div id="collapsefour" class="collapse" data-parent="#accordion">
 		<div class="card-body body-accordion">
-			<p>EUR 99 including exam, Cert Fee (EUR 60) + VAT</p>
+			<p>EUR 240 including exam, Cert Fee (EUR 60) + VAT</p>
 		</div>
 	</div>
 	</div>
@@ -192,9 +192,9 @@
 				<div class="row no-gutters">
 					<div class="col-10 offset-1">
 						<div class="text-center">
-							<h3 class="uppercase form-heading">How does that sound?</h3>
-							<p>Send us a message and we will come back to you with course availability and
-								more information</p>
+							<h3 class="uppercase form-heading">Get in touch</h3>
+							<p>We're here to help you find the courses that work for you.</p>
+                            <p>Get in touch with our <em>education team</em> by submitting a message below.</p>
 							<p><small>Alternatively please register your interest at hi@coffeeproject.ie</small>
 							</p>
 						</div>
