--- a/intro.html
+++ b/intro.html
@@ -92,7 +92,7 @@
 		<div class="container main-landing">
 			<div class="row no-gutters">
 				<div class="col">
-					<img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
+					<img src="./assets/images/ourcourses.jpg" alt="milk jugs image" class="ourcourses-img">
 					<p class="ph-landing uppercase">courses</p>
 				</div>
 			</div>
@@ -191,9 +191,9 @@
 				<div class="row no-gutters">
 					<div class="col-10 offset-1">
 						<div class="text-center">
-							<h3 class="uppercase form-heading">How does that sound?</h3>
-							<p>Send us a message and we will come back to you with course availability and
-								more information</p>
+							<h3 class="uppercase form-heading">Get in touch</h3>
+							<p>We're here to help you find the courses that work for you.</p>
+                            <p>Get in touch with our <em>education team</em> by submitting a message below.</p>
 							<p><small>Alternatively please register your interest at hi@coffeeproject.ie</small>
 							</p>
 						</div>
