fixed navbar in all pages

--- a/index.html
+++ b/index.html
@@ -19,32 +19,31 @@
 <!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
-				<img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
+				<img src="./assets/images/coffee-project-logo.png" width="100" alt="coffeeproject-logo"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
 				<div class="collapse navbar-collapse " id="collapsibleNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="coffees.html">Our coffees</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="brewing.html">Brewing guides</a>
+							<a class="nav-link" href="coffees.html">Coffees</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our
-								courses</a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
 								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
 							</div>
 						</li>
+                        <li class="nav-item">
+							<a class="nav-link" href="brewing.html">Guides</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
-                    <div class="col d-inline-flex justify-content-right d-md-none d-lg-inline">
+                    <div class="col d-inline-flex justify-content-right d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
                             <li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
@@ -73,12 +72,6 @@
 								<a href="https://www.instagram.com/" target="_blank">
 									<i class="fab fa-instagram" aria-hidden="true"></i>
 									<span class="sr-only">Instagram</span>
-								</a>
-							</li>
-							<li class="list-inline-item">
-								<a href="https://github.com/roxanahefferon" target="_blank">
-									<i class="fab fa-github-square" aria-hidden="true"></i>
-									<span class="sr-only">Github</span>
 								</a>
 							</li>
 						</ul>
