--- a/index.html
+++ b/index.html
@@ -397,15 +397,15 @@
 
 				<div class="container signup-container">
 					<div class="row no-gutters">
-						<div class="col-10 offset-1">
-                        <div class="text-center mb-1">
-							<h3 class="form-heading uppercase mb-0">Stay updated </h3>
+						<div class="col-12">
+                        <div class="text-center">
+							<h3 class="form-heading uppercase mt-3">Stay updated </h3>
                             <i class="fas fa-mail-bulk fa-5x"></i>
-                            </div>
-                            <p style="color: #003333;">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
-							<hr class="section-divider">
+                            <p class="my-3">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
+							</div>
+                            <hr class="section-divider">
                             <form>
-								<div class="form-group">
+								<div class="form-group signup-form ">
 									<label for="exampleInputEmail1">Email address</label>
 									<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
 									<small id="emailHelp" class="form-text text-muted">*We promise not to share with third parties.</small>
@@ -479,13 +479,13 @@
 					<div class="col d-inline-flex justify-content-center d-sm-block text-center">
 						<ul class="list-inline">
 							<li class="list-inline-item footer-inline">
+								<p>1 Peaberry Street, D1 | A12 BC34</p>
+							</li>
+                            <li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-							<li class="list-inline-item footer-inline">
-								<p>+35313657616</p>
-							</li>
-							<li class="list-inline-item footer-inline">
-								<p>137 Peaberry Street, Dublin 1 | A12 BC34</p>
+                            <li class="list-inline-item footer-inline">
+								<p>(01) 2148634</p>
 							</li>
 						</ul>
 					</div>
