--- a/cafetiere.html
+++ b/cafetiere.html
@@ -199,13 +199,13 @@
 					<div class="col d-inline-flex justify-content-center d-sm-block text-center">
 						<ul class="list-inline">
 							<li class="list-inline-item footer-inline">
+								<p>1 Peaberry Street, D1 | A12 BC34</p>
+							</li>
+                            <li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-							<li class="list-inline-item footer-inline">
-								<p>+35313657616</p>
-							</li>
-							<li class="list-inline-item footer-inline">
-								<p>137 Peaberry Street, Dublin 1 | A12 BC34</p>
+                            <li class="list-inline-item footer-inline">
+								<p>(01) 2148634</p>
 							</li>
 						</ul>
 					</div>
