--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,7 @@
 	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<title>Coffee Project Co.</title>
-</head>
+    </head>
 
 <body>
 
@@ -97,14 +97,15 @@
 
 	<div class="container">
 		<div class="row no-gutters">
-			<div class="col-10 offset-1">
+			<div class="col-12">
 				<p class="uppercase text-center name-accordion">Intro to coffee</p>
-				<div id="accordion">
+                <p class="text-accordion">From growing the cherries through grading, roasting and brewing, this module provides an overview of the coffee value chain.</p>
+                <div id="accordion">
 					<div class="card card-accordion">
 						<div class="card-header header-accordion">
 							<a class="card-link" data-toggle="collapse" href="#collapseone">
 								<div class="text-center">
-									<i class="fas fa-coins fa-2x"></i>
+									<i class="fas fa-coins"></i>
 									<p>SCA Points</p>
 							</a>
 						</div>
@@ -121,7 +122,7 @@
 					<div class="card-header header-accordion">
 						<a class="collapsed card-link" data-toggle="collapse" href="#collapsetwo">
 							<div class="text-center">
-								<i class="fas fa-sitemap fa-2x"></i>
+								<i class="fas fa-sitemap"></i>
 								<p>Overview</p>
 						</a>
 					</div>
@@ -141,7 +142,7 @@
 				<div class="card-header header-accordion">
 					<a class="collapsed card-link" data-toggle="collapse" href="#collapsethree">
 						<div class="text-center">
-							<i class="fas fa-chart-line fa-2x"></i>
+							<i class="fas fa-chart-line"></i>
 							<p>Experience</p>
 					</a>
 				</div>
@@ -158,7 +159,7 @@
 		<div class="card-header header-accordion">
 			<a class="collapsed card-link" data-toggle="collapse" href="#collapsefour">
 				<div class="text-center">
-					<i class="fas fa-money-bill-alt fa-2x"></i>
+					<i class="fas fa-money-bill-alt"></i>
 					<p>Cost</p>
 			</a>
 		</div>
@@ -174,7 +175,7 @@
 		<div class="card-header header-accordion">
 			<a class="collapsed card-link" data-toggle="collapse" href="#collapsesix">
 				<div class="text-center">
-					<i class="fas fa-envelope-open-text fa-2x"></i>
+					<i class="fas fa-envelope-open-text"></i>
 					<p>More Info</p>
 			</a>
 		</div>
@@ -183,11 +184,11 @@
 		<div class="card-body">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-10 offset-1">
+					<div class="col-12">
 						<div class="text-center">
 							<h3 class="uppercase form-heading">Get in touch</h3>
 							<p>We're here to help you find the courses that work for you.</p>
-                            <p>Get in touch with our <em>education team</em> by submitting a message below.</p>
+                            <p>Contact our <em>education team</em> by submitting a message below.</p>
 							<p><small>Alternatively please register your interest at hi@coffeeproject.ie</small>
 							</p>
 						</div>
