content and styling accordion on barista-sca.html

--- a/barista-sca.html
+++ b/barista-sca.html
@@ -98,14 +98,15 @@
 
 	<div class="container">
 		<div class="row no-gutters">
-			<div class="col-10 offset-1">
+			<div class="col-12">
 				<p class="uppercase text-center name-accordion">Barista SCA</p>
+                <p class="text-accordion">Learn the practical skills you need behind the espresso bar: learn how to set your grinder, milk techniques and latte art, health and safety, customer service, and basic business practices.</p>
 				<div id="accordion">
 					<div class="card card-accordion">
 						<div class="card-header header-accordion">
 							<a class="card-link" data-toggle="collapse" href="#collapseone">
 								<div class="text-center">
-									<i class="fas fa-coins fa-2x"></i>
+									<i class="fas fa-coins"></i>
 									<p>SCA Points</p>
 							</a>
 						</div>
@@ -113,8 +114,7 @@
 					<div id="collapseone" class="collapse" data-parent="#accordion">
 						<div class="card-body body-accordion">
 							<p>This course is at foundation level and brings 5 points towards the Coffee Diploma.</p>
-							<p>New to coffee? This one day class focusses on the core skills required to deliver all the key drinks on the menu.</p>
-                            <p>You’ll also gain an insight into how coffee is grown, processed and roasted.</p>
+                            <p>You will gain an insight into how coffee is grown, processed and roasted.</p>
 						</div>
 					</div>
 				</div>
@@ -123,17 +123,19 @@
 					<div class="card-header header-accordion">
 						<a class="collapsed card-link" data-toggle="collapse" href="#collapsetwo">
 							<div class="text-center">
-								<i class="fas fa-sitemap fa-2x"></i>
+								<i class="fas fa-sitemap"></i>
 								<p>Overview</p>
 						</a>
 					</div>
 				</div>
 				<div id="collapsetwo" class="collapse" data-parent="#accordion">
 					<div class="card-body body-accordion">
-						<p>Explore the differences between Arabicas and Robustas and how to maintain freshness.</p>
-						<p>Extract the perfect espresso following a set of steps that make up the industry discipline</p>
-                        <p>Steam different milk textures to bring together a whole host of espresso based drinks.</p>
-                        <p>Round off the learning with machine cleaning and basic maintenance, before sitting a series of assessments.</p>
+                    <ul>
+					    <li><p>Explore the differences between Arabicas and Robustas and how to maintain freshness.</p></li>
+						<li><p>Extract the perfect espresso following a set of steps that make up the industry discipline.</p></li>
+                        <li><p>Steam different milk textures to bring together a whole host of espresso based drinks.</p></li>
+                        <li><p>Round off the learning with machine cleaning and basic maintenance, before sitting a series of assessments.</p></li>
+                        </ul>
 					</div>
 				</div>
 			</div>
@@ -142,7 +144,7 @@
 				<div class="card-header header-accordion">
 					<a class="collapsed card-link" data-toggle="collapse" href="#collapsethree">
 						<div class="text-center">
-							<i class="fas fa-chart-line fa-2x"></i>
+							<i class="fas fa-chart-line"></i>
 							<p>Experience</p>
 					</a>
 				</div>
@@ -159,7 +161,7 @@
 		<div class="card-header header-accordion">
 			<a class="collapsed card-link" data-toggle="collapse" href="#collapsefour">
 				<div class="text-center">
-					<i class="fas fa-money-bill-alt fa-2x"></i>
+					<i class="fas fa-money-bill-alt"></i>
 					<p>Cost</p>
 			</a>
 		</div>
@@ -175,7 +177,7 @@
 		<div class="card-header header-accordion">
 			<a class="collapsed card-link" data-toggle="collapse" href="#collapsesix">
 				<div class="text-center">
-					<i class="fas fa-envelope-open-text fa-2x"></i>
+					<i class="fas fa-envelope-open-text"></i>
 					<p>More Info</p>
 			</a>
 		</div>
@@ -184,7 +186,7 @@
 		<div class="card-body">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-10 offset-1">
+					<div class="col-12">
 						<div class="text-center">
 							<h3 class="uppercase form-heading">Get in touch</h3>
 							<p>We're here to help you find the courses that work for you.</p>
